add borders, resize image, re-aligned title and added italics, and replaced lorem ipsum with cosmic wisdom

--- a/animal.html
+++ b/animal.html
@@ -9,11 +9,31 @@
 
     <h1>Harrow Animal Haven</h1>
 
+    <h2>Please adopt these precious angels.</h2>
+
+    <p class="links">
+      <a href="">Link</a>
+      <a href="">Link</a>
+      <a href="">Link</a>
+      <a href="">Link</a>
+      <a href="">Link</a>
+      <a href="">Link</a>
+      <a href="">Link</a>
+      <a href="">Link</a>
+    </p>
+
 <div class="animal">
 <div class="scotty">
 
 <img src="https://i.imgflip.com/182wzx.jpg">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h3>Scotty tha Scottish Terriaaarrrwr</h3>
+<p>Consciousness consists of vibrations of quantum energy. “Quantum” means a blossoming of the dynamic.
+Consciousness is a constant. To traverse the quest is to become one with it.
+It is in deepening that we are guided. Humankind has nothing to lose. We are at a crossroads of presence and delusion. Who are we? Where on the great story will we be aligned? The goal of molecular structures is to plant the seeds of starfire rather than suffering. Manna requires exploration. Intention is the richness of wisdom, and of us. Being, look within and fulfill yourself. It can be difficult to know where to begin. How should you navigate this ethereal planet?
+
+<span class="starfire">We are in the midst of an unlimited redefining of starfire that will align us with the quantum cycle itself. We must learn how to lead infinite lives in the face of discontinuity. We must awaken ourselves and empower others. Soon there will be a deepening of potential the likes of which the galaxy has never seen.</span>
+
+The galaxy is calling to you via chaos-driven reactions. Can you hear it? Have you found your vision quest? If you have never experienced this vector inherent in nature, it can be difficult to self-actualize..</p>
 
 </div>
 </div>
@@ -21,14 +41,16 @@
 <div class="dog">
 <img src="https://www.documentingreality.com/forum/attachments/f242/430997d1361380913-bad-taxidermy-bad-taxidermy-dog.jpg">
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h3>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 </div>
 
 <div class="animal">
 <div class="cat">
 <img src="https://i.kym-cdn.com/entries/icons/original/000/019/749/catroomguardian.JPG">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Soon there will be a condensing of conscious living the likes of which the world has never seen. We are being called to explore the dreamscape itself as an interface between curiosity and interconnectedness. This myth never ends. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 </div>
 
