add names to pet bios

--- a/animal.html
+++ b/animal.html
@@ -41,7 +41,7 @@ The galaxy is calling to you via chaos-driven reactions. Can you hear it? Have y
 <div class="dog">
 <img src="https://www.documentingreality.com/forum/attachments/f242/430997d1361380913-bad-taxidermy-bad-taxidermy-dog.jpg">
 
-<h3>
+<h3>Nigel the Destroyer!!1!</h3>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
@@ -50,6 +50,7 @@ The galaxy is calling to you via chaos-driven reactions. Can you hear it? Have y
 <div class="animal">
 <div class="cat">
 <img src="https://i.kym-cdn.com/entries/icons/original/000/019/749/catroomguardian.JPG">
+<h3>Timothy the Wizard</h3>
 <p>Soon there will be a condensing of conscious living the likes of which the world has never seen. We are being called to explore the dreamscape itself as an interface between curiosity and interconnectedness. This myth never ends. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 </div>
