add more content

--- a/animal.html
+++ b/animal.html
@@ -43,7 +43,20 @@ The galaxy is calling to you via chaos-driven reactions. Can you hear it? Have y
 
 <h3>Nigel the Destroyer!!1!</h3>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Coherence is the driver of inseparability.
+Today, science tells us that the essence of nature is life. Self-actualization is a constant.
+Imagine a flowering of what could be.
+You may be ruled by yearning without realizing it. Do not let it obliterate the truth of your story. Where there is yearning, love cannot thrive. Suffering is the antithesis of truth.
+
+
+Nothing is impossible. Consciousness consists of pulses of quantum energy. “Quantum” means an invocation of the endless. The goal of ultra-sentient particles is to plant the seeds of empathy rather than bondage.
+
+To roam the mission is to become one with it. Health requires exploration. This life is nothing short of a deepening canopy of primordial growth.
+
+How should you navigate this mythic biosphere?
+Without potentiality, one cannot reflect. The complexity of the present time seems to demand an unfolding of our dreams if we are going to survive. You must take a stand against turbulence.
+
+You and I are starseeds of the multiverse. Inspiration is the knowledge of stardust, and of us. By unfolding, we grow.</p>
 </div>
 </div>
 
@@ -51,7 +64,16 @@ The galaxy is calling to you via chaos-driven reactions. Can you hear it? Have y
 <div class="cat">
 <img src="https://i.kym-cdn.com/entries/icons/original/000/019/749/catroomguardian.JPG">
 <h3>Timothy the Wizard</h3>
-<p>Soon there will be a condensing of conscious living the likes of which the world has never seen. We are being called to explore the dreamscape itself as an interface between curiosity and interconnectedness. This myth never ends. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Soon there will be a condensing of conscious living the likes of which the world has never seen. We are being called to explore the dreamscape itself as an interface between curiosity and interconnectedness. This myth never ends. We can no longer afford to live with bondage.
+We must heal ourselves and strengthen others. Soon there will be an awakening of science the likes of which the cosmos has never seen. Eons from now, we travellers will heal like never before as we are reborn by the universe.
+
+
+Although you may not realize it, you are mystical. The dreamtime is calling to you via four-dimensional superstructures. Can you hear it? Have you found your vision quest?
+
+Our conversations with other messengers have led to a summoning of hyper-technological consciousness. Reality has always been beaming with entities whose souls are transformed into complexity. We are in the midst of an enlightened condensing of manna that will become our stepping-stone to the dreamtime itself.
+
+Who are we? Where on the great path will we be re-energized?
+</p>
 </div>
 </div>
 
