flurp the links

--- a/animal.html
+++ b/animal.html
@@ -12,14 +12,18 @@
     <h2>Please adopt these precious angels.</h2>
 
     <p class="links">
-      <a href="">Link</a>
-      <a href="">Link</a>
-      <a href="">Link</a>
-      <a href="">Link</a>
-      <a href="">Link</a>
-      <a href="">Link</a>
-      <a href="">Link</a>
-      <a href="">Link</a>
+      <a href="">flurpLink</a>
+      <a href="">flurpLink</a>
+      <a href="">flurpLink</a>
+      <a href="">flurpLink</a>
+      <a href="">flurpLink</a>
+      <a href="">flurpLink</a>
+      <a href="">flurpLink</a>
+      <a href="">flurpLink</a>
+      <a href="">flurpLink</a>
+      <a href="">flurpLink</a>
+      <a href="">flurpLink</a>
+      <a href="">flurpLink</a>
     </p>
 
 <div class="animal">
